<resources>
    <string name="app_name">TİMER</string>

    <string-array name="colors">
        <item>Yeşil</item>
        <item>Kırmızı</item>
        <item>Sarı</item>
        <item>Mavi</item>
        <item>Kahverengi</item>
        <item>Gri</item>
        <item>Turuncu</item>
        <item>Pembe</item>
        <item>Mor</item>
    </string-array>

    <string name="yesil">Yeşil</string>
    <string name="kirmizi">Yeşil</string>
    <string name="sari">Sarı</string>
    <string name="mavi">Mavi</string>

    <string name="password">Şifre</string>
    <string name="password_error">Yanlış Şifre!</string>
    <string name="log_in">GİRİŞ YAP</string>
    <string name="past_uses">Geçmiş Kullanımlar</string>
    <string name="vehicle_list">Araç Listesi</string>
    <string name="total_usage">Toplam Kullanım: </string>
    <string name="number_of_reset">Reset Sayısı: </string>
    <string name="number_of_finish">Bitiş Sayısı: </string>
    <string name="add_vehicle">Araç Ekle</string>
    <string name="vehicle_name">Araç Adı</string>
    <string name="old_pass">Eski Şifre</string>
    <string name="new_pass">Yeni Şifre</string>
    <string name="confirm">Onayla</string>
    <string name="vehicle_start_time">Başlangıç Süresi</string>
    <string name="save_vehicle">Aracı Kaydet</string>
    <string name="save_detail_changes">DEĞİŞİKLİKLERİ KAYDET</string>
    <string name="save_changes">Değişiklikleri Kaydet</string>
    <string name="finish">BİTİR</string>
    <string name="go_to_detail">DETAYA GİT</string>
    <string name="start">BAŞLAT</string>
    <string name="reset">RESET</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="delete_past">Geçmişi Temizle</string>
    <string name="past_deleted">Geçmiş Temizlendi!</string>
    <string name="are_you_sure_delete_past">Geçmişteki Verileri Silmek İstediğinize Emin Misiniz?</string>
    <string name="are_you_sure_delete_all">Tüm Araçları Silmek İstediğinize Emin Misiniz?</string>
    <string name="fill_in_the_blanks">Boşlukları Doldurunuz!</string>
    <string name="save_changes_error">Girdiler Aynı Olamaz!</string>
    <string name="save_is_successful">Kayıt Başarılı.</string>
    <string name="changes_is_successful">Değişiklikler Kaydedildi.</string>
    <string name="finished">Bitirildi</string>
    <string name="reseted">Resetlendi</string>
    <string name="past_shared">past_shared_preferences</string>
    <string name="data_is_not_started">Aracı başlatınız veya bitiriniz.</string>
    <string name="data_is_not_finished">Aracı başlatınız veya bitmesini bekleyiniz.</string>
    <string name="delete_vehicle">ARACI SİL</string>
    <string name="vehicle_is_deleted">Araç Silindi.</string>
    <string name="are_you_sure_delete_vehicle">Aracı Silmek İstediğinizden Emin Misiniz?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_screen">Yönetici Ekranı</string>
    <string name="user_screen">Kullanıcı Ekranı</string>
    <string name="delete_all">Tümünü Sil</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="all_deleted">Tüm Araçlar Temizlendi.</string>
    <string name="password_changed">Şifre Değiştirildi.</string>
    <string name="please_start_vehicle">Süre bitmeden aracı başlatamazsınız!</string>
    <string name="logo">Logo</string>
    <string name="finished_vehicles">Biten Araç</string>
    <string name="okay">Tamam</string>

</resources>