<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="10dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="10dp"
    android:layout_width="340dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:text="@string/add_vehicle"/>

    <EditText
        android:id="@+id/editTextVehicleName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/vehicle_name"
        android:autofillHints="false"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextVehicleTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/vehicle_start_time"
        android:autofillHints="false"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSaveVehicle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save_vehicle" />

</LinearLayout>