<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_border"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextOldPass"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:maxLength="8"
        android:hint="@string/old_pass"
        android:autofillHints="false"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextNewPass"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:maxLength="8"
        android:hint="@string/new_pass"
        android:autofillHints="false"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonConfirm"
        android:background="@drawable/button_background"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/confirm" />

</LinearLayout>