<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="10dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/finish" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/cancel" />

</LinearLayout>